# devtools-course-practice

./: .gitignore  CMakeLists.txt  README.md  devtools_test.cmake
lab-guide/: lab-1-setup.md  lab-2-library.md
modules/IntersectTwoLine/: LineSegment.cpp
modules/Sort/: CTestTests.txt
modules/area-converter/: CTestTests.txt
modules/area-of-three-dimensional-figures/: CTestTests.txt
modules/arithmetic-parser/: CMakeLists.txt  CTestTests.txt
modules/bit-array/: CMakeLists.txt
modules/bugreport-check/: CMakeLists.txt
modules/color-spaces/: CTestTests.txt
modules/converter-currency/: CTestTests.txt
modules/dichotomy-method/: CMakeLists.txt  CTestTests.txt
modules/fraction/: CTestTests.txt
modules/huffman-algoritm/: CTestTests.txt
modules/integration-methods/: CMakeLists.txt  CTestTests.txt
modules/interpolation-search/: CTestTests.txt  README.md
modules/kiparenko-ilya-symbolic-derivative/: CMakeLists.txt
modules/lab2-integration-methods/: CMakeLists.txt
modules/line_plane_intersec/: CTestTests.txt
modules/matrix-multiplication/: CMakeLists.txt
modules/mortgage-calculator/: CTestTests.txt
modules/newton_method/: CTestTests.txt
modules/quadratic-equation/: CMakeLists.txt  CTestTests.txt
modules/queue/: CMakeLists.txt  CTestTests.txt
modules/root-finder/: CTestTests.txt
modules/sapper/: CTestTests.txt  README.md
modules/stack/: CMakeLists.txt  CTestTests.txt
modules/stack/application/: CMakeLists.txt  app_stack.cpp  infix-to-postfix.cpp
modules/statistical-moments/: CTestTests.txt
modules/symbolic-derivative/: README.md
(+468 files in other folders)
